--- a/Class2(19Feb2025).ipynb
+++ b/Class2(19Feb2025).ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "728322de-579f-4467-b53d-854826ca2676",
    "metadata": {},
    "outputs": [
@@ -49,12 +49,12 @@
     }
    ],
    "source": [
-    "100 + 300 "
+    "100 + 300 # Addition"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "36caab1f-bd4d-424f-96b8-44a4dc8cd5cc",
    "metadata": {},
    "outputs": [
@@ -70,12 +70,12 @@
     }
    ],
    "source": [
-    "100 + 34.6 "
+    "100 + 34.6  #Addition and float"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "a94acf72-8a02-4bdd-a37c-601c05c89950",
    "metadata": {},
    "outputs": [
@@ -91,12 +91,12 @@
     }
    ],
    "source": [
-    "15 - 34 "
+    "15 - 34 #subtraction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "531a4d68-237d-4eb3-b1cf-c5e2c23c454c",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "45 * 4 "
+    "45 * 4 #multiplication"
    ]
   },
   {
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "442584be-f0fb-470e-bcb2-3a1661efdb32",
    "metadata": {},
    "outputs": [
@@ -169,13 +169,13 @@
        "125"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "5 ** 3 "
+    "5 ** 3 # exponent power"
    ]
   },
   {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "0c094caf-b844-4b8c-8f24-1f8915b1aa6c",
    "metadata": {},
    "outputs": [
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "49a540af-cfaf-4f1f-a198-e3dd523180e4",
    "metadata": {},
    "outputs": [
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "100 >= 200"
+    "100 >= 200 # Results in boolean"
    ]
   },
   {
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "eeeabc79-b442-4aaa-869d-f7fd35d59f0f",
    "metadata": {},
    "outputs": [
@@ -301,12 +301,12 @@
     }
    ],
    "source": [
-    "200==300"
+    "200==300 #equal to"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "570e9447-708f-4f6a-bf09-32dee5b1da50",
    "metadata": {},
    "outputs": [
@@ -322,7 +322,7 @@
     }
    ],
    "source": [
-    "200!=300"
+    "200!=300 #Not equal to"
    ]
   },
   {
@@ -1289,7 +1289,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
