--- a/Class11(12March2025) (1).ipynb
+++ b/Class11(12March2025) (1).ipynb
@@ -22,12 +22,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "e7aed771-8249-48ce-906c-ed91e946f6ea",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Kia chaye? protector\n"
@@ -41,7 +41,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Kinte chahye hen? 20\n",
@@ -57,7 +57,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Kia chaye? power_bank\n"
@@ -71,7 +71,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Kinte chahye hen? 5\n",
@@ -87,7 +87,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Kia chaye? earbuds\n"
@@ -101,7 +101,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Kinte chahye hen? 10\n"
@@ -115,7 +115,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Kia chaye? keyboard\n"
@@ -129,7 +129,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Kinte chahye hen? 5\n",
@@ -145,7 +145,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Kinte chahye hen? 10\n"
@@ -159,7 +159,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Kia chaye? mobile_cover\n"
@@ -173,7 +173,7 @@
      ]
     },
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Kinte chahye hen? 25\n",
@@ -192,7 +192,7 @@
     }
    ],
    "source": [
-    "total = 0\n",
+    "`total = 0\n",
     "while True:\n",
     "    item = input(f\"Kia chaye?\").lower()\n",
     "    if item in papo_bhai_easyload:\n",
@@ -221,7 +221,7 @@
     "        print(\"Not Avaialble\")\n",
     "print(f\"Total purchased amt: {total}\")\n",
     "print(f\"Discount amt: {discount}\")\n",
-    "print(f\"Amount payable: {total-discount}\")"
+    "print(f\"Amount payable: {total-discount}\")`"
    ]
   },
   {
